1.1.3-SNAPSHOT. Compile with Java 11.